yaml/4_imqa/3_ingress/ingress-collector.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector
  namespace: collector
spec:
  ingressClassName: traefik
  rules:
  - host: test-nh-collector.imqa.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-collector
            port:
              number: 4318
  tls:
  - hosts:
    - test-nh-collector.imqa.io
    secretName: otel-collector-tls
