yaml/4_imqa/3_ingress/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imqa-web
  namespace: api
spec:
  ingressClassName: traefik
  rules:
  - host: test-nh.imqa.io
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: imqa-web
            port:
              number: 3301
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /assets
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /_next
        pathType: Prefix
        backend:
          service:
            name: imqa-web
            port:
              number: 3301
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imqa-web
            port:
              number: 3301
  tls:
  - hosts:
    - test-nh.imqa.io
    secretName: web-tls
